--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <maven-dependency-plugin.version>3.0.2</maven-dependency-plugin.version>
         <spring-context.version>5.0.3.RELEASE</spring-context.version>
         <junit.version>4.12</junit.version>
+        <log4j.version>1.2.17</log4j.version>
     </properties>
 
     <dependencies>
@@ -33,6 +34,12 @@
             <artifactId>junit</artifactId>
             <version>${junit.version}</version>
             <scope>test</scope>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/log4j/log4j -->
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>${log4j.version}</version>
         </dependency>
 
     </dependencies>
