--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,4 +1,7 @@
-log4j.rootLogger=DEBUG, stdout
+log4j.logger.org.springframework=OFF
+log4j.logger.org.apache.commons=OFF
+#log4j.rootLogger=debug, stdout
+log4j.rootLogger=OFF
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
