--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,6 @@ language: java
 jdk:
   - openjdk8
 before_install:
+  - sudo apt-get update -q
   - sudo apt-get install -y openjfx
 script: mvn test -B
